src/test/ui/issues/issue-57979.stderr
error[E0666]: nested `impl Trait` is not allowed
  --> $DIR/issue-57979.rs:39:61
   |
LL | pub fn collect(_: impl IntoIterator<Item = impl Borrow<Data<impl AsRef<[u8]>>>>) {
   |                                            -----------------^^^^^^^^^^^^^^^^--
   |                                            |                |
   |                                            |                nested `impl Trait` here
   |                                            outer `impl Trait`

error[E0601]: `main` function not found in crate `issue_57979`
   |
   = note: consider adding a `main` function to `$DIR/issue-57979.rs`

error: aborting due to 2 previous errors

Some errors occurred: E0601, E0666.
For more information about an error, try `rustc --explain E0601`.
